--- a/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/returns_FALSE_for_a_500_response_to_a_DELETE_request.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/returns_FALSE_for_a_500_response_to_a_DELETE_request.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: delete
-    uri: http://localhost:3000/annotations/checking_anno_id
+    uri: http://localhost:3000/annotations/500_is_false
     body:
       encoding: US-ASCII
       string: ''
@@ -29,26 +29,25 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 64a23603-58e9-4698-95b6-f8155a4dac15
+      - 8b274e2e-d4ab-41b8-aa99-f8aa73deb743
       X-Runtime:
-      - '0.040965'
+      - '0.061279'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Mon, 18 May 2015 20:06:08 GMT
+      - Mon, 18 May 2015 20:06:07 GMT
       Content-Length:
-      - '1446'
+      - '1438'
       Connection:
       - Keep-Alive
       Set-Cookie:
       - request_method=DELETE; path=/
     body:
       encoding: UTF-8
-      string: "<h2>error getting checking_anno_id from LDP</h2><html>\n<head>\n<meta
-        http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error
-        404 Not Found</title>\n</head>\n<body><h2>HTTP ERROR 404</h2>\n<p>Problem
-        accessing /fedora/rest/anno/checking_anno_id. Reason:\n<pre>    Not Found</pre></p><hr
-        /><i><small>Powered by Jetty://</small></i><br/>                                                \n<br/>
+      string: "<h2>error getting 500_is_false from LDP</h2><html>\n<head>\n<meta http-equiv=\"Content-Type\"
+        content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error 404 Not Found</title>\n</head>\n<body><h2>HTTP
+        ERROR 404</h2>\n<p>Problem accessing /fedora/rest/anno/500_is_false. Reason:\n<pre>
+        \   Not Found</pre></p><hr /><i><small>Powered by Jetty://</small></i><br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
@@ -58,7 +57,7 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
-        \                                               \n\n</body>\n</html>\n"
+        \                                               \n<br/>                                                \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Mon, 18 May 2015 20:06:08 GMT
+  recorded_at: Mon, 18 May 2015 20:06:07 GMT
 recorded_with: VCR 2.9.3
