--- a/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/returns_TRUE_for_a_404_response_to_a_DELETE_request.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClient/_delete_annotation/returns_TRUE_for_a_404_response_to_a_DELETE_request.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: delete
-    uri: http://localhost:3000/annotations/anything_here_is_OK
+    uri: http://localhost:3000/annotations/404_is_true
     body:
       encoding: US-ASCII
       string: ''
@@ -29,26 +29,25 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 84cea024-35fe-4347-86ea-06e5c83d0793
+      - c764a882-4b9a-466c-96d1-9e8af31e4646
       X-Runtime:
-      - '0.029365'
+      - '0.047105'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Wed, 13 May 2015 22:29:42 GMT
+      - Mon, 18 May 2015 20:06:07 GMT
       Content-Length:
-      - '1452'
+      - '1436'
       Connection:
       - Keep-Alive
       Set-Cookie:
       - request_method=DELETE; path=/
     body:
       encoding: UTF-8
-      string: "<h2>error getting anything_here_is_OK from LDP</h2><html>\n<head>\n<meta
-        http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error
-        404 Not Found</title>\n</head>\n<body><h2>HTTP ERROR 404</h2>\n<p>Problem
-        accessing /fedora/rest/anno/anything_here_is_OK. Reason:\n<pre>    Not Found</pre></p><hr
-        /><i><small>Powered by Jetty://</small></i><br/>                                                \n<br/>
+      string: "<h2>error getting 404_is_true from LDP</h2><html>\n<head>\n<meta http-equiv=\"Content-Type\"
+        content=\"text/html; charset=ISO-8859-1\"/>\n<title>Error 404 Not Found</title>\n</head>\n<body><h2>HTTP
+        ERROR 404</h2>\n<p>Problem accessing /fedora/rest/anno/404_is_true. Reason:\n<pre>
+        \   Not Found</pre></p><hr /><i><small>Powered by Jetty://</small></i><br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
@@ -58,7 +57,7 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
-        \                                               \n\n</body>\n</html>\n"
+        \                                               \n<br/>                                                \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Wed, 13 May 2015 22:29:42 GMT
+  recorded_at: Mon, 18 May 2015 20:06:07 GMT
 recorded_with: VCR 2.9.3
